--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	"type": "module",
 	"dependencies": {
 		"d3-geo": "^2.0.2",
+		"d3-time-format": "^3.0.0",
 		"flubber": "^0.4.2",
 		"smartquotes": "^2.3.2",
 		"topojson-client": "^3.1.0",
