--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "crossworld",
 	"version": "0.1.0",
 	"scripts": {
-		"dev": "svelte-kit dev",
+		"dev": "svelte-kit dev --host",
 		"build": "svelte-kit build",
 		"package": "svelte-kit package",
 		"preview": "svelte-kit preview",
@@ -15,7 +15,6 @@
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
 		"sass": "^1.49.7",
-		"simple-svelte-autocomplete": "^2.2.4",
 		"svelte": "^3.44.0",
 		"svelte-preprocess": "^4.10.3"
 	},
