--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"prettier-plugin-svelte": "^2.5.0",
 		"sass": "^1.49.7",
 		"svelte": "^3.44.0",
+		"svelte-keyboard": "^0.4.0",
 		"svelte-preprocess": "^4.10.3"
 	},
 	"type": "module",
