--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "crossworld",
 	"version": "0.1.0",
 	"scripts": {
-		"dev": "svelte-kit dev",
+		"dev": "svelte-kit dev --host",
 		"build": "svelte-kit build",
 		"package": "svelte-kit package",
 		"preview": "svelte-kit preview",
